--- a/overlays/themes/SystemBlackTheme/res/values/colors.xml
+++ b/overlays/themes/SystemBlackTheme/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="notification_progress_background_color">@*android:color/theme_text2</color>
     <color name="notification_snooze_text">@*android:color/theme_text1</color>
     <color name="notification_text_color1">@*android:color/theme_text1</color>
-    <color name="notification_icon_default_color">@android:color/white</color>
+    <color name="notification_icon_default_color">@*android:color/generic_theme_accent</color>
     <color name="notification_ambient_icon_default_color">@android:color/white</color> 
     <!-- Toast text and bg colors -->
     <color name="toast_bg_color">@*android:color/black</color>
