--- a/themes/Accents/Blue/res/values/colors.xml
+++ b/themes/Accents/Blue/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF448AFF</color>
     <color name="generic_theme_primary_dark">#FF366ECC</color>
     <color name="generic_theme_accent">#FF3D7CE5</color>
+    <color name="gradient_end">#FF0052DB</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
