--- a/themes/Accents/Black/res/values/colors.xml
+++ b/themes/Accents/Black/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF222222</color>
     <color name="generic_theme_primary_dark">#FF1A1A1A</color>
     <color name="generic_theme_accent">#FF191919</color>
+    <color name="gradient_end">#FF161616</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
