--- a/themes/Accents/Amber/res/values/colors.xml
+++ b/themes/Accents/Amber/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFFFC107</color>
     <color name="generic_theme_primary_dark">#FFCC9A05</color>
     <color name="generic_theme_accent">#FFE5AD06</color>
+    <color name="gradient_end">#FFC19100</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FF000000</color>
