--- a/themes/Accents/Brown/res/values/colors.xml
+++ b/themes/Accents/Brown/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF795548</color>
     <color name="generic_theme_primary_dark">#FF604439</color>
     <color name="generic_theme_accent">#FF6C4C40</color>
+    <color name="gradient_end">#FF553d34</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
