--- a/themes/Accents/DeepOrange/res/values/colors.xml
+++ b/themes/Accents/DeepOrange/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFFF5722</color>
     <color name="generic_theme_primary_dark">#FFCC451B</color>
     <color name="generic_theme_accent">#FFE54E1E</color>
+    <color name="gradient_end">#FFBA421C</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
