--- a/themes/Accents/Green/res/values/colors.xml
+++ b/themes/Accents/Green/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF4CAF50</color>
     <color name="generic_theme_primary_dark">#FF3C8C40</color>
     <color name="generic_theme_accent">#FF449D48</color>
+    <color name="gradient_end">#FF3E9742</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
