--- a/themes/Accents/Grey/res/values/colors.xml
+++ b/themes/Accents/Grey/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF9E9E9E</color>
     <color name="generic_theme_primary_dark">#FF7E7E7E</color>
     <color name="generic_theme_accent">#FF8E8E8E</color>
+    <color name="gradient_end">#FF7A7A7A</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
