--- a/themes/Accents/Indigo/res/values/colors.xml
+++ b/themes/Accents/Indigo/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF536DFE</color>
     <color name="generic_theme_primary_dark">#FF4257CB</color>
     <color name="generic_theme_accent">#FF4A62E4</color>
+    <color name="gradient_end">#FF4156C9</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
