--- a/themes/Accents/LightGreen/res/values/colors.xml
+++ b/themes/Accents/LightGreen/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF8BC34A</color>
     <color name="generic_theme_primary_dark">#FF6F9C3B</color>
     <color name="generic_theme_accent">#FF7DAF42</color>
+    <color name="gradient_end">#FF76A63F</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
