--- a/themes/Accents/Lime/res/values/colors.xml
+++ b/themes/Accents/Lime/res/values/colors.xml
@@ -28,7 +28,8 @@
     <color name="generic_theme_primary">#FFCDDC39</color>
     <color name="generic_theme_primary_dark">#FFA4B02D</color>
     <color name="generic_theme_accent">#FFB8C633</color>
-
+    <color name="gradient_end">#FFAEBA33</color>
+     
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FF000000</color>
 </resources>
