--- a/themes/Accents/Pink/res/values/colors.xml
+++ b/themes/Accents/Pink/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="generic_theme_primary">#FFFF4081</color>
     <color name="generic_theme_primary_dark">#FFCC3367</color>
     <color name="generic_theme_accent">#FFE53974</color>
+    <color name="gradient_end">#FFC83567</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
