--- a/themes/Accents/Purple/res/values/colors.xml
+++ b/themes/Accents/Purple/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFE040FB</color>
     <color name="generic_theme_primary_dark">#FFB333C8</color>
     <color name="generic_theme_accent">#FFC939E1</color>
+    <color name="gradient_end">#FFB732CD</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
