--- a/themes/Accents/Red/res/values/colors.xml
+++ b/themes/Accents/Red/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFFF5252</color>
     <color name="generic_theme_primary_dark">#FFCC4141</color>
     <color name="generic_theme_accent">#FFE54949</color>
+    <color name="gradient_end">#FFCA3B3B</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
