--- a/themes/Accents/Teal/res/values/colors.xml
+++ b/themes/Accents/Teal/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FF009688</color>
     <color name="generic_theme_primary_dark">#FF00786C</color>
     <color name="generic_theme_accent">#FF00877A</color>
+    <color name="gradient_end">#FF00766B</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FFFFFFFF</color>
