--- a/themes/Accents/White/res/values/colors.xml
+++ b/themes/Accents/White/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFB2B2B2</color>
     <color name="generic_theme_primary_dark">#FFCCCCCC</color>
     <color name="generic_theme_accent">#FF999999</color>
+    <color name="gradient_end">#FF979797</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FF000000</color>
