--- a/themes/Accents/Yellow/res/values/colors.xml
+++ b/themes/Accents/Yellow/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="generic_theme_primary">#FFFFEB3B</color>
     <color name="generic_theme_primary_dark">#FFCCBC2F</color>
     <color name="generic_theme_accent">#FFE5D335</color>
+    <color name="gradient_end">#FFdac82b</color>
 
     <!-- Fastscroller -->
     <color name="fastscroller_text_color">#FF000000</color>
