--- a/overlays/themes/SystemBlackTheme/res/values/config.xml
+++ b/overlays/themes/SystemBlackTheme/res/values/config.xml
@@ -4,4 +4,5 @@
     <bool name="config_useBlackBgNotificationTinting_override">true</bool>
     <bool name="config_notificationTinting_override">true</bool>
     <bool name="config_allowNotificationIconTinting">true</bool>
+    <bool name="config_useDarkBgNotificationIconTextTinting">true</bool>
 </resources>
