--- a/overlays/common/frameworks/base/core/res/res/values/colors.xml
+++ b/overlays/common/frameworks/base/core/res/res/values/colors.xml
@@ -29,4 +29,9 @@
     <color name="Teal_700">#ff5a9af8</color>
     <color name="Teal_800">#ff5795f0</color>
 
+    <!-- Generic colors -->
+    <color name="generic_theme_primary">#FF506BF8</color>
+    <color name="generic_theme_primary_dark">#FF506BF8</color>
+    <color name="generic_theme_accent">#FF506BF8</color>
+
 </resources>
